tests/sksl/errors/ReservedNameSampler2DShadow.glsl
### Compilation failed:

error: 1: name 'sampler2DShadow' is reserved
int sampler2DShadow;
    ^^^^^^^^^^^^^^^
1 error
